Fixed spacing for single.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,7 +13,7 @@ div.query table td.label {
 div.results table {
     border-collapse: collapse;
 }
-th, td {
+div.results th, div.results td {
     border: 1px solid black;
     padding: 4px;
     text-align: left;
